--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -446,3 +446,18 @@ a {
     text-decoration: none;
 }
 
+/* LOGO LOGIN */
+
+.auth-logo {
+    width: 240px;          /* 🔥 tamaño ideal desktop */
+    max-width: 80%;
+    margin-bottom: 16px;
+}
+
+/* Responsive */
+@media (max-width: 480px) {
+    .auth-logo {
+        width: 190px;
+    }
+}
+
