--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -24,10 +24,10 @@
 
             <div class="form-group">
                 <label for="negocio">Negocio</label>
-                <input 
+                <input
                     id="negocio"
-                    type="text" 
-                    name="negocio" 
+                    type="text"
+                    name="negocio"
                     placeholder="Nombre del negocio"
                     required
                 >
@@ -36,12 +36,23 @@
             <div class="form-group">
                 <label for="usuario">Usuario</label>
                 <input
+                    id="usuario"
+                    type="text"
+                    name="usuario"
+                    placeholder="Usuario"
+                    required
+                >
+            </div>
+
+            <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input
+                    id="password"
                     type="password"
                     name="password"
                     placeholder="Contraseña"
                     required
                 >
-
             </div>
 
             <button type="submit" class="btn-primary">
@@ -49,6 +60,7 @@
             </button>
 
         </form>
+
 
     </div>
 </div>
