--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -61,6 +61,9 @@
 
         </form>
 
+        {% if error %}
+        <div class="error-box">{{ error }}</div>
+        {% endif %}
 
     </div>
 </div>
